# simple-vector2d

./: .travis.yml  Cargo.toml  LICENCE  README.md  appveyor.yml  search-index.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js  trait.Into.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Copy.js
implementors/core/ops/: trait.Add.js  trait.AddAssign.js  trait.Div.js  trait.DivAssign.js  trait.Mul.js  trait.MulAssign.js  trait.Neg.js  trait.Sub.js  trait.SubAssign.js
simple_vector2d/: index.html  sidebar-items.js  struct.Vector2.html
simple_vector2d/consts/: constant.DOWN_F32.html  constant.DOWN_F64.html  constant.LEFT_F32.html  constant.LEFT_F64.html  constant.RIGHT_F32.html  constant.RIGHT_F64.html  constant.UP_F32.html  constant.UP_F64.html  constant.ZERO_F32.html  constant.ZERO_F64.html  index.html  sidebar-items.js
src/: lib.rs
src/simple_vector2d/src/: lib.rs.html
tests/: vector_tests.rs
